# isonome-pnp

./: README.md  demo.py  pyproject.toml  setup.py
isonome_pnp/: __init__.py  cli.py  core.py  udev_watcher.py  watcher.py
systemd/: isonome-pnp.service
tests/: test_cli.py  test_core.py  test_udev_watcher.py  test_watcher.py
